--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,11 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
+  font-size: 1.1em;
 }
 
 header {
-  min-height: 54.5vh;
+  min-height: 450px;
   background-image: url("https://images.pexels.com/photos/16592498/pexels-photo-16592498.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -28,7 +29,6 @@ header {
   justify-content: center;
   align-items: center;
   gap: 1em;
-  font-size: 1.1rem;
 }
 
 h1 {
@@ -52,6 +52,33 @@ h1 {
 }
 
 .first-section {
-  min-height: 27.2vh;
+  min-height: 224px;
   background-color: #eaeaea;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #333333;
+  gap: 1.3em;
+  padding-bottom: 2em;
+}
+
+h2 {
+  font-size: 1.65rem;
+  font-weight: bold;
+}
+
+.first-section > div {
+  display: flex;
+  gap: 1.8em;
+}
+
+.first-section > div > p {
+  max-width: 400px;
+  text-align: center;
+}
+
+.second-section {
+  min-height: 388px;
+  background-color: #333333;
 }
